--- a/app/src/main/res/layout/fragment_gif.xml
+++ b/app/src/main/res/layout/fragment_gif.xml
@@ -1,24 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center">
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <com.felipecsl.gifimageview.library.GifImageView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/gifImageView"
-        android:layout_gravity="center"
-        android:scaleType="fitCenter"/>
+        android:id="@+id/imageView"
+        android:scaleType="centerInside"
+        android:background="@color/md_black_1000"/>
 
-    <ImageButton
-        android:id="@+id/gif_play"
+    <ProgressBar
+        android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/play"
-        android:background="#0000"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:indeterminate="true" />
 
 </RelativeLayout>
