--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -55,7 +55,7 @@
             android:layout_alignRight="@id/ic_document_type"
             android:focusable="false"
             android:scaleType="center"
-            android:visible="false"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_offline_gray"/>
 
         <ImageView
@@ -67,8 +67,7 @@
             android:focusable="false"
             android:scaleType="center"
             android:visible="false"
-            android:layout_marginRight="2dp"
-            app:srcCompat="@drawable/ic_cached_green"/>
+            app:srcCompat="@drawable/ic_offline_gray"/>
 
         <ImageView
             android:id="@+id/ic_document_cache_progress"
@@ -78,7 +77,7 @@
             android:layout_alignRight="@id/ic_document_type"
             android:focusable="false"
             android:scaleType="center"
-            android:visible="false"
+            android:visibility="gone"
             android:layout_marginRight="2dp"
             app:srcCompat="@drawable/ic_cached_gray"/>
     </RelativeLayout>
